Fixing alignment of header

--- a/app/assets/stylesheets/newbranding.css.scss
+++ b/app/assets/stylesheets/newbranding.css.scss
@@ -311,6 +311,7 @@ body.registrations.new, body.registrations.create, body.sessions, body.passwords
 
     .brand {
       margin-top: 10px;
+      margin-left: 0;
     }
 
     .nav li  {
